--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -3,24 +3,37 @@ anyio==4.4.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
+contourpy==1.2.1
+cycler==0.12.1
 fastapi==0.114.0
+fonttools==4.53.0
 h11==0.14.0
 idna==3.8
 iniconfig==2.0.0
+Jinja2==3.1.4
+kiwisolver==1.4.5
+MarkupSafe==3.0.1
+matplotlib==3.9.0
 numpy==2.1.1
 opencv-python==4.10.0.84
 packaging==24.1
+pandas==2.2.2
 pillow==10.4.0
 pluggy==1.5.0
 pydantic==2.9.1
 pydantic_core==2.23.3
+pyparsing==3.1.2
 pytesseract==0.3.13
 pytest==8.3.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
 PyYAML==6.0.2
 Random-Word==1.0.11
 requests==2.32.3
+six==1.16.0
 sniffio==1.3.1
 starlette==0.38.5
 typing_extensions==4.12.2
+tzdata==2024.1
 urllib3==2.2.2
 uvicorn==0.30.6
